refactor member name